Changes to Home and About me pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+## A long time ago in a blog far far away...*GamesCode*
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+Hi I'm Victor, welcome to GameCode, if this is your first time here you probably will find this place a little different since there are 2 topics that I will consistently write **Code and Video Games**. The main difference is that although everyone likes "real life" examples 
+of a programming language or coding technique, IMHO I have found that "real life" examples sometimes can be, tedious, boring and for some of us like **me** harder to learn; in an effort spice it up I've mixed coding with my other passions (video games, movies, series yay!!).
+I have found if I do this it makes my learning more valueable, meaningful and less forgetful. 
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+I hope the content you find in this blog it's helpful for you or at least fun and that you can take it mix it with your passions to build or try something new.
 
 # Posts
